<resources>
    <string name="app_name" translatable="false">Vamos!</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="profile_home">Profilo</string>
    <string name="search">Cerca</string>
    <string name="map">Mappa</string>
    <string name="filterStructure">Filtra</string>
    <string name="email_login_hint" translatable="false">Email</string>
    <string name="password_login_hint" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="no_account">Non hai ancora un account?</string>
    <string name="cancel_login">Continua senza login</string>
    <string name="email_sign_up_hint" translatable="false">Email*</string>
    <string name="name_sign_up_hint">Nome*</string>
    <string name="last_name_sign_up_hint">Cognome*</string>
    <string name="nickname_sign_up_hint" translatable="false">Nickname*</string>
    <string name="password_sign_up_hint" translatable="false">Password*</string>
    <string name="repeat_password_sign_up_hint">Ripeti password</string>
    <string name="sign_up">Crea account</string>
    <string name="name_profile_hint">Nome</string>
    <string name="last_name_profile_hint">Cognome</string>
    <string name="nickname_profile_hint" translatable="false">Nickname</string>
    <string name="password_profile_hint" translatable="false">Password</string>
    <string name="all">Tutto</string>
    <string name="hotel">Hotel</string>
    <string name="restaurant">Ristoranti</string>
    <string name="attractions">Attrazioni</string>
    <string name="no_position_error">Geolocalizzazione disattivata, attivala per trovare le attrazioni nelle vicinanze. Attivala e riaggiorna la pagina cliccando sul pulsante nella barra in alto</string>
    <string name="active_geolocation">Attiva geolocalizzazione</string>
    <string name="what">Cosa:</string>
    <string name="price_search_page">Prezzo: Qualsiasi</string>
    <string name="distance_filter_page">Distanza: Fino a 1 km</string>
    <string name="default_distance_filter_page">Distanza: Fino a 10 km</string>
    <string name="rank_search_page">Voto medio: Qualsiasi</string>
    <string name="see_results">Vedi risultati</string>
    <string name="current_position">Posizione attuale</string>
    <string name="up_to">Fino a</string>
    <string name="price">Prezzo</string>
    <string name="price_up_to_something">Prezzo: Fino a %1$d €</string>
    <string name="price_over_limit">Prezzo: Oltre %1$d €</string>
    <string name="distance_up_to_something">Distanza: Fino a %1$d km</string>
    <string name="rank_up_to_something">Voto medio: Da %1$d</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="posizione_attuale">Posizione attuale</string>
    <string name="where">Dove</string>
    <string name="titolo">Titolo</string>
    <string name="descrizione">Descrizione</string>
    <string name="tocca_una_stella_per_indicare_un_punteggio">Tocca una stella per indicare un punteggio</string>
    <string name="pubblica_anonimamente">Pubblica Anonimamente</string>
    <string name="no" translatable="false">No</string>
    <string name="s">Sì</string>
    <string name="aggiungi_recensione">Aggiungi Recensione</string>
    <string name="pessimo">Pessimo</string>
    <string name="scarso">Scarso</string>
    <string name="nella_media">Nella media</string>
    <string name="molto_buono">Molto buono</string>
    <string name="eccellente">Eccellente</string>
    <string name="accomodation_details">Informazioni sulla struttura</string>
    <string name="read_all_reviews">Leggi Recensioni</string>
    <string name="certificate_of_excellence">Certificato di Eccellenza</string>
    <string name="no_star_selected">Nessuna stella selezionata</string>
    <string name="almost_there">Ci siamo quasi</string>
    <string name="check_confirmation_link">Controlla la tua email e clicca il link che ti abbiamo inviato per verificare il tuo account</string>
    <string name="review_it">Recensisci</string>
    <string name="email_or_username">Email o Username</string>
    <string name="username" translatable="false">Username</string>
    <string name="insert_password">Inserisci password</string>
    <string name="dialog_description_insert_password">Inserisci la password per assicurarci che sia davvero tu a voler modificare il profilo</string>
    <string name="verify">Verifica</string>
    <string name="insert_new_password">Inserisci nuova password</string>
    <string name="cancel">Annulla</string>
    <string name="new_password">Nuova password</string>
    <string name="repeat_new_password">Ripeti la nuova password</string>
    <string name="email_profile_hint" translatable="false">Email</string>
    <string name="all_hotel" translatable="false">Hotel</string>
    <string name="all_restaurant">Ristoranti</string>
    <string name="all_attraction">Attrazioni</string>
    <string name="no_reviews">Nessuna recensione</string>
    <string name="password_error">Password errata</string>
    <string name="password_updated_correctly">Password aggiornata correttamente</string>
    <string name="password_update_error">Errore durante l\'aggiornamento della password, riprova</string>
    <string name="hotel_stars">Stelle hotel:</string>
    <string name="avarage_price">Prezzo medio:</string>
    <string name="currency" translatable="false">€</string>
    <string name="anonymous">Anonimo</string>
    <string name="type_of_cuisine">Tipi di cucina</string>
    <string name="no_phone_number">Nessun numero di telefono disponibile</string>
    <string name="no_information_available">Nessuna informazione disponibile</string>
    <string name="gratis" translatable="false">Gratis</string>
    <string name="end_of_results">Fine dei risultati</string>
    <string name="refresh">Aggiorna</string>
    <string name="see_on_map">Vedi su mappa</string>
    <string name="hotel_stars_filter">Stelle hotel: Qualsiasi</string>
    <string name="hotel_stars_filter_up_to">Stelle hotel: Fino a %1$d</string>
    <string name="city">Città</string>
    <string name="name">Nome</string>
    <string name="no_hotels_found_by_filter">Nessun hotel trovato in base ai criteri di ricerca</string>
    <string name="no_restaurants_found_by_filter">Nessun ristorante trovato in base ai criteri di ricerca</string>
    <string name="no_attractions_found_by_filter">Nessuna attrazione trovata in base ai criteri di ricerca</string>
    <string name="review">recensione</string>
    <string name="reviews">recensioni</string>
    <string name="users_reviews">Recensioni degli utenti</string>
    <string name="field_cannot_be_empty">Questo campo non può essere vuoto</string>
    <string name="login_error">Si è verificato un errore durante il login, controlla le credenziali o assicurati che il tuo account sia verificato e riprova</string>
    <string name="passwords_not_match">Le password non coincidono</string>
    <string name="email_pattern_error">Inserisci un\'email valida</string>
    <string name="unexpected_error_during_sign_up">Errore imprevisto durante la registrazione, riprova</string>
    <string name="email_already_exist">Email già in uso</string>
    <string name="username_already_exist">Username già in uso</string>
    <string name="wait_for_login_result">Attendi, verifica delle credenziali in corso</string>
    <string name="add_review">Aggiungi recensione</string>
    <string name="no_content_error_hotel_detail">Errore, nessun hotel trovato</string>
    <string name="no_content_error_restaurant_detail">Errore, nessun ristorante trovato</string>
    <string name="no_content_error_attraction_detail">Errore, nessun attrazione trovata</string>
    <string name="unexpected_error_while_fetch_data">Errore imprevisto durante il recupero dei dati, riprova</string>
    <string name="no_attractions_found_home_page">Non ci sono attrazioni interessanti nelle tue vicinanze. Modifica i filtri di ricerca cliccando sulla lente di ingrandimento in alto a destra</string>
    <string name="no_hotels_found_nearby">Nessun hotel trovato nelle vicinanze</string>
    <string name="no_hotels_found_home_page">Non è stato possibile trovare hotel nelle vicinanze, accedi alla lista degli hotel e modifica i filtri di ricerca</string>
    <string name="no_restaurants_found_home_page">Non è stato possibile trovare ristoranti nelle vicinanze, accedi alla lista dei ristoranti e modifica i filtri di ricerca</string>
    <string name="title_activity_accomodation_detail_maps" translatable="false">Map</string>
    <string name="loading_in_progress">Caricamento in corso</string>
    <string name="review_successfully_submitted">Recensione inserita con successo.\nHai ottenuto 30 punti livello</string>
    <string name="unexpected_error_while_entering_the_review">Errore imprevisto durante l\'inserimento della recensione, riprova</string>
    <string name="wait_while_insert_review">Attendi, sto salvando la tua recensione</string>
    <string name="no_login_profile_error">Sembra che tu non abbia ancora effettuato il login. Collega un account cliccando il tasto in alto a destra per poter accedere a funzionalità aggiuntive</string>
    <string name="logout">Logout</string>
    <string name="add_make_login">Effettua un nuovo login</string>
    <string name="retrieving_user_details">Attendi, sto recuperando le informazioni del tuo account</string>
    <string name="forward">Avanti</string>
    <string name="travel_intro">Benvenuto su Vamos! l\'app che ti aiuta a scegliere tra migliaia di attrazioni turistiche. L\'app cerca in automatico in un raggio di 10 km dalla tua posizione attuale</string>
    <string name="see_on_map_intro">Per avere una visione più chiara, puoi vedere le attrazioni intorno a te anche sulla mappa ed applicare filtri di ricerca per soddisfare le tue esigenze</string>
    <string name="see_reviews_intro">Puoi leggere recensioni oppure scriverne di nuove per aiutare gli altri utenti nella scelta di un\'attrazione e salire di livello acquisendo badge e titoli per competere con utenti da tutta Italia</string>
    <string name="enjoy_intro">Goditi le tue escursioni, clicca avanti e fornisci i permessi all\'app per poter accedere alla tua posizione.\nVamos? Vamos!</string>
    <string name="access_location_permission_required">Per poter proseguire è necessario fornire l\'autorizzazione per l\'accesso alla posizione</string>
    <string name="missing_location_permission">L\'app non è in grado di cercare le strutture nelle tue vicinanze se il permesso per accedere alla posizione è negato. Fornisci il permesso per permettere all\'app di funzionare correttamente</string>
    <string name="provide_permission">Fornisci autorizzazione</string>
    <string name="wait_for_account_creation">Attendi, creazione account in corso</string>
    <string name="no_hotels_to_show_on_map">Nessun hotel da mostrare su mappa</string>
    <string name="no_restauants_to_show_on_map">Nessun ristorante da mostrare su mappa</string>
    <string name="no_attractions_to_show_on_map">Nessuna attrazione da mostrare su mappa</string>
    <string name="certificate_of_excellence_dialog_message">"L'app attribuisce un certificato di eccellenza alle attrazioni che beneficiano di recensioni particolarmente positive da parte degli utenti"</string>
    <string name="reviews_profile">Recensioni</string>
    <string name="avarage_rating">Voto medio</string>
    <string name="leaderboard">Classifica</string>
    <string name="edit_profile">Modifica profilo</string>
    <string name="search_user">Cerca utente</string>
    <string name="forgot_password">Password dimenticata?</string>
    <string name="forgot_password_insert_email">Inserisci l\'email associata al tuo account. Ti invieremo il codice con il quale potrai reimpostare la password</string>
    <string name="send_confirmation_code">Invia codice</string>
</resources>