<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/logout_profile"
        android:icon="@drawable/icon_logout_profile_white"
        android:orderInCategory="1"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search_user_profile"
        android:icon="@drawable/icon_search_users_white"
        android:orderInCategory="2"
        android:title="@string/search_user"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit_profile"
        android:icon="@drawable/icon_edit_white"
        android:orderInCategory="3"
        android:title="@string/edit_profile"
        app:showAsAction="ifRoom" />

</menu>