<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".views.ResetPasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/forgot_password" />

    <TextView
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/forgot_password_insert_email"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_forgot_password_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/email_login_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:digits="abcdefghijklmnopqrstuvwxyz1234567890-_@."
            android:inputType="textFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_send_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button_green_round_corner"
        android:enabled="false"
        android:text="@string/send_confirmation_code"
        android:textColor="@color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>