<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="TODO"
            android:src="@drawable/app_icon_no_background" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_key_login"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/email_login_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:digits="abcdefghijklmnopqrstuvwxyz1234567890-_@."
                    android:inputType="textFilter"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_password_login"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/password_login_hint"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_view_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="?android:attr/selectableItemBackground"
                android:padding="5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="60dp"
                android:background="@drawable/background_login_button"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/no_account"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/text_view_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/sign_up"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

    <TextView
        android:id="@+id/text_view_cancel_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:text="@string/cancel_login"
        android:textColor="@color/black" />

</RelativeLayout>